--- a/22-sass-trillo/css/style.css
+++ b/22-sass-trillo/css/style.css
@@ -82,7 +82,6 @@ body {
 
 .hotel-view {
   background-color: #fff;
-  height: 80rem;
   flex: 1; }
 
 .detail {
@@ -92,6 +91,7 @@ body {
   border-bottom: var(--line); }
 
 .description {
+  font-size: 1.4rem;
   background-color: #fff;
   box-shadow: var(--shadow-light);
   padding: 3rem;
@@ -233,12 +233,13 @@ body {
 .overview {
   display: flex;
   align-items: center;
-  border-bottom: var(--line) .overview __heading;
-    border-bottom-font-size: 2.25rem;
-    border-bottom-font-weight: 300;
-    border-bottom-text-transform: uppercase;
-    border-bottom-letter-spacing: 1px;
-    border-bottom-padding: 1.5rem 3rem; }
+  border-bottom: var(--line); }
+  .overview__heading {
+    font-size: 2.25rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    padding: 1.5rem 3rem; }
   .overview__stars {
     margin-right: auto;
     display: flex; }
@@ -296,3 +297,45 @@ body {
   100% {
     transform: scale(1);
     box-shadow: none; } }
+
+.paragraph:not(:last-of-type) {
+  margin-bottom: 2rem; }
+
+.list {
+  list-style: none;
+  margin: 3rem 0;
+  padding: 3rem 0;
+  border-top: var(--line);
+  border-bottom: var(--line);
+  display: flex;
+  flex-wrap: wrap; }
+  .list__item {
+    flex: 0 0 50%;
+    margin-bottom: 0.7rem; }
+  .list__item::before {
+    content: '';
+    display: inline-block;
+    height: 1rem;
+    width: 1rem;
+    margin-right: 0.7rem;
+    background-color: var(--color-primary);
+    -webkit-mask-image: url(../img/chevron-thin-right.svg);
+    -webkit-mask-size: cover;
+    mask-image: url(../img/chevron-thin-right.svg);
+    mask-size: cover; }
+
+.recommend {
+  font-size: 1.3rem;
+  color: var(--color-grey-dark-3);
+  display: flex;
+  align-items: center; }
+  .recommend__count {
+    margin-right: auto; }
+  .recommend__photo {
+    box-sizing: content-box;
+    height: 4rem;
+    width: 4rem;
+    border-radius: 50%;
+    border: 3px solid #fff; }
+    .recommend__photo:not(:last-child) {
+      margin-right: -1.5rem; }
