--- a/22-sass-trillo/sass/_layout.scss
+++ b/22-sass-trillo/sass/_layout.scss
@@ -35,8 +35,6 @@
 
 .hotel-view {
   background-color: #fff;
-  height: 80rem;
-
   flex: 1;
 }
 
@@ -48,6 +46,7 @@
 }
 
 .description {
+  font-size: 1.4rem;
   background-color: #fff;
   box-shadow: var(--shadow-light);
   padding: 3rem;
