--- a/22-sass-trillo/sass/_base.scss
+++ b/22-sass-trillo/sass/_base.scss
@@ -35,6 +35,10 @@ Grey dark 3: #999
   --line: 1px solid var(--color-grey-light-2);
 }
 
+$bp-largest: 75em; // 1200px
+$bp-large: 68.75em; // 1100px
+$bp-medium: 56.25em; // 900px
+
 * {
   padding: 0;
   margin: 0;
@@ -49,6 +53,10 @@ Grey dark 3: #999
 html {
   box-sizing: border-box;
   font-size: 62.5%; // 1rem = 10px;
+
+  @media only screen and (max-width: $bp-large) {
+    font-size: 50%;
+  }
 }
 
 body {
